--- a/modulo2 CSS/lista de alguns comandos/index.html
+++ b/modulo2 CSS/lista de alguns comandos/index.html
@@ -35,30 +35,30 @@
             <li> div:hover</li>
             <li>width: 200px;</li><!--Comprimento-->
             <li>Em CSS estes são alguns SELETORES PERSONALIZADOS: 
-                <li># = id</li>
-                <li>. = class</li>
-                <li>: = pseudo-class</li>
-                <li>:: = pseudo-element</li>
-                <li>> = children ex (div > p) <!-- (div > p) indica o filho dentro da div--></li></li>
+                <li> # = id</li>
+                <li> . = class</li>
+                <li> : = pseudo-class</li>
+                <li> :: = pseudo-element</li>
+                <li> * {informacao geral}</li>
+                <li> > = children ex. (div > p) <!-- (div > p) indica o filho dentro da div--></li></li>
                 <li>height</li><!--altura-->
                 <li>width</li><!--largura-->
-                <li>border</li><!--borda-->
-                <li>Padding</li><!--espaco entre a borda e as letras-->
+                <li>border</li><!--borda ou cantos-->
+                <li>Padding</li><!--preenchimento de espaço-->
                 <li>Margin</li><!--espaco externo da borda-->
                 <li>outline</li><!--linha externa a borda-->
+                <li>Shadow</li><!--sonbreado-->
                 <li>div, h1- h6, p, main, header, nav, article, aside, footer, form, video.são todos -box-level- porque oucupam a linha completa
                 <li>span, a, code, small, strong, em,sup, sub,label, botton,imput, select são inline-level, porque mantem na mensma linha</li>
                 <li>header</li>
+                <li>nav</li>
                 <li>main</li>
                 <li>section</li>
                 <li>article</li>
                 <li>aside</li>
                 <li>footer</li>
-                <li>variaveis
-                    --root{incerir as variaveis}
-                    </li>
-                <li>*{informacao geral}</li>
-                <li></li>
+                <li>--root{incerir as variaveis}</li><!--variaveis-->
+                <li>:root (para o uso de variaveis)</li> 
 
 
         
