--- a/modulo2 CSS/ex022 github/fundo007.html
+++ b/modulo2 CSS/ex022 github/fundo007.html
@@ -6,13 +6,26 @@
     <title>Centralização Vertical de Caixa</title>
     <style>
         #container{
-            height: 400px;
-            background-color: purple;
+            background-image: url('imgens/target001.png');
+            background-size: 100% 100%;
+
+            position: relative;
             padding: 10px;
+            height: 96vh;
+            background-color: purple;
+              
         }
         #conteudo{
-            height: 200px;
+            background-image: url('imgens/target001.png');
+            background-size: 100% 100%;
             background-color: yellow;
+            height: 200px;
+            width: 400px;
+            
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
