--- a/modulo2 CSS/desafio 12/index.html
+++ b/modulo2 CSS/desafio 12/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
         
     </header>
 
@@ -99,7 +99,7 @@
 
 </section>
 <footer>
-    <p>site criado por <a href="https://sebajoap.github.io" target="_blank">sebajaop</a> em <a href="https://cursoemvideo" target="_blank">curso em video</a></p>
+    <p>site criado por <a href="https://github.com/sebajoap" target="_blank">sebajaop</a> em <a href="https://cursoemvideo" target="_blank">curso em video</a></p>
 </footer>
 </body>
 </html>
