--- a/modulo2 CSS/desafio 12/index.html
+++ b/modulo2 CSS/desafio 12/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Modeno</title>
+    <link rel="stylesheet" href="estilostyle.css">
 </head>
 <body>
     <header>
@@ -99,7 +100,7 @@
 
 </section>
 <footer>
-    <p>site criado por <a href="https://github.com/sebajoap" target="_blank">sebajaop</a> em <a href="https://cursoemvideo" target="_blank">curso em video</a></p>
+    <p>site criado por <a href="https://github.com/sebajoap" target="_blank">sebajaop</a> em <a href="https://cursoemvideo.com" target="_blank">curso em video</a></p>
 </footer>
 </body>
 </html>
