--- a/modulo2 CSS/lista de alguns comandos/index.html
+++ b/modulo2 CSS/lista de alguns comandos/index.html
@@ -58,7 +58,8 @@
                 <li>aside</li>
                 <li>footer</li>
                 <li>--root{incerir as variaveis}</li><!--variaveis-->
-                <li>:root (para o uso de variaveis)</li> 
+                <li>:root (para o uso de variaveis)</li>
+                <li>text-transform: uppercase;</li> <!--para colocar todas as letras em maiusculas-->
 
 
         
