--- a/modulo2 CSS/desafio 12/index.html
+++ b/modulo2 CSS/desafio 12/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Modeno</title>
-    <link rel="stylesheet" href="estilostyle.css">
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
         
     </header>
 
-<section>
+<section class="normal">
     <p>
         Estou ficando cansado <br>
         Da tal tecnologia <br>
@@ -24,10 +25,7 @@
         Vou dizer tudo em poesia.
     </p>
 </section>
-
-
-
-<section>
+<section class="imagem">
     <p>
         Não é mais como era antes <br>
         É tudo abreviado <br>
@@ -40,7 +38,7 @@
 </section>
 
 
-<section>
+<section class="normal">
     <p>
         Arroba agora não pesa <br>
         É parte de um endereço <br>
@@ -64,7 +62,7 @@
 
 
 
-<section>
+<section class="imagem">
     <p>
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
@@ -77,7 +75,7 @@
 </section>
 
 
-<section>
+<section class="normal">
     <p>
         Agora, escrevo e envio <br>
         Chegando na mesma hora <br>
@@ -100,7 +98,7 @@
 
 </section>
 <footer>
-    <p>site criado por <a href="https://github.com/sebajoap" target="_blank">sebajaop</a> em <a href="https://cursoemvideo.com" target="_blank">curso em video</a></p>
+    <p>Site criado por <a href="https://github.com/sebajoap" target="_blank">sebajaop</a> durante o <a href="https://cursoemvideo.com" target="_blank">curso em video</a></p>
 </footer>
 </body>
 </html>
