--- a/html5 e css3/ex023 tabelas/tabela.html
+++ b/html5 e css3/ex023 tabelas/tabela.html
@@ -20,6 +20,9 @@
             text-align: center; /*alinhamento horizontal*/
             vertical-align: middle; /*alinhamento vertical*/
         }
+        .numero{
+            text-align: right;
+        }
         
         
     </style>
@@ -42,12 +45,12 @@
         <tr>
             <td class="dado">A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>B3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr>
             <td>A4</td>
