--- a/html5 e css3/ex023 tabelas/tabela.html
+++ b/html5 e css3/ex023 tabelas/tabela.html
@@ -31,9 +31,9 @@
     <h1>Minha primeira tabala</h1>
     <!--HIERARQUIA DE TABALAS (simples).
     TABLE = Tabalas
-        TABLE ROW = Linha de tabela
-            TABLE HEADER = cabecalhoo de tabela
-                TABLE DATA = Dados de tabela
+        TABLE ROW = tr =Linha de tabela
+            TABLE HEADER = th = cabecalhoo de tabela
+                TABLE DATA = td = Dados de tabela
 
     -->
     <table>
