--- a/html5 e css3/ex023 tabelas/tabela002.html
+++ b/html5 e css3/ex023 tabelas/tabela002.html
@@ -35,6 +35,7 @@
     <h1>Uso de Tabelas</h1>
     <!--ANATOMIA PARA USO DE TABELAS GRANDES,
             TABELA
+                CAPTION (legenda)
                 THEAD
                     TR, TD, TH
                 TBODY
@@ -46,6 +47,7 @@
                     th  
     -->
         <table>
+            <caption>População das Uindades Federativas</caption>
             <thead>
                 <tr>
                     <th>Posição</th>
