--- a/html5 e css3/ex023 tabelas/tabela004.html
+++ b/html5 e css3/ex023 tabelas/tabela004.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body>
-    <h1>Exercicio de Tabalas</h1>
+    <h1>Exercicio de Tabalas "uso do colspan e rowspan".</h1>
     <table>
         <caption>Filmes Favoritos</caption>
         <thead>
